--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -1,14 +1,12 @@
-- title: home
-  url: /
-  external: false
-
-- title: archive
-  url: /archive/
-  external: false
-
-- title: about
-  url: /about/
-  external: false # set true if you using external link, see below
+# - title: home
+#   url: /
+#   external: false
+# - title: archive
+#   url: /archive/
+#   external: false
+# - title: about
+#   url: /about/
+#   external: false # set true if you using external link, see below
 
 # Example:
 # - title: github
